# robotic

./: docusaurus.config.ts  package-lock.json  package.json
RAG-DOCS/: agent.py  main.py  pyproject.toml  retrieving.py
src/components/: UrduTranslateButton.css
src/components/HomepageFeatures/: index.tsx  styles.module.css
src/css/: custom.css
src/pages/: index.module.css  index.tsx
src/theme/: Layout.js
src/utils/: translationConfig.ts
