[project]
name = "rag-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "cohere>=5.20.0",
    "dotenv>=0.9.9",
    "load-dotenv>=0.1.0",
    "qdrant-client>=1.16.1",
    "requests>=2.32.5",
    "tensorflow>=2.20.0",
    "trafilatura>=2.0.0",
]
